# telegram_bot_translate_rust

./: .env.example  Cargo.toml  README.md
src/: main.rs
