[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12.2", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
env_logger = "0.7.1"
dotenv = "0.15"
teloxide-core = "0.9.1"
